# FlightsHub

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  celery_app.py  db.py  docker-compose.yml  entrypoint.sh  main.py  models.py  pyproject.toml  sample.env  supervisord.conf  tasks.py
ai/: __init__.py  factory.py  provider.py
app/: app.py  config.py  exceptions.py  local.env  middlewares.py  websocket_manager.py
app_graphql/: permissions.py  router.py  schema.py
app_graphql/mutations/: auth.py  flights.py
app_graphql/queries/: flights.py
app_graphql/types/: auth.py  flights.py
authentication/: models.py  router.py  utils.py
common/: models.py  router.py  utils.py
flights/: ai_service.py  models.py  router.py  utils.py
migrations/: env.py
migrations/versions/: 0a30746e80b3_reservation_user_booker.py  13ac6275ed6b_initial_migration.py  1adda8273d95_user_status.py  2fa34bd32ebd_rerun_migrations.py  36038ca148d5_update_m2m_linkage.py  3cde01c64875_user_models.py  579ecbe8b795_flight_reservations.py  661f6a66036a_user_status.py  6b40f5d4614a_reintroduce_the_m2m_btw_user_and_.py  72c4d52a44d0_drop_link_table.py  9096ec9e1fd8_convert_m2m_to_fk_between_airline_and_.py  9d458cef1528_user_status.py  a0bed39fa093_update.py  a1a716248018_major_refactor.py  a39c741d88fb_flight_model_and_table_creation.py  a4317ca7a240_flight_fare_field.py  a7a63f3582fc_initial_migration.py  b16f00124ec3_flight_seats.py  c4b4fcdaee4f_user_avatar.py
models/: __init__.py  authentication.py  common.py  flights.py
tests/: conftest.py  test_ai_search.py  test_auth.py
